; ModuleID = '/home/carl/AnghaBench/fastdfs/common/extr_fdfs_http_shared.c_fdfs_http_gen_token.c'
source_filename = "/home/carl/AnghaBench/fastdfs/common/extr_fdfs_http_shared.c_fdfs_http_gen_token.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i8* }

@ENOSPC = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [3 x i8] c"%d\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @fdfs_http_gen_token(%struct.TYPE_3__* %0, i8* %1, i32 %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_3__*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca [320 x i8], align 16
  %11 = alloca [16 x i8], align 16
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store i8* %3, i8** %9, align 8
  %14 = load i8*, i8** %7, align 8
  %15 = call i32 @strlen(i8* %14)
  store i32 %15, i32* %12, align 4
  %16 = load i32, i32* %12, align 4
  %17 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 8
  %20 = add nsw i32 %16, %19
  %21 = add nsw i32 %20, 12
  %22 = sext i32 %21 to i64
  %23 = icmp ugt i64 %22, 320
  br i1 %23, label %24, label %26

24:                                               ; preds = %4
  %25 = load i32, i32* @ENOSPC, align 4
  store i32 %25, i32* %5, align 4
  br label %65

26:                                               ; preds = %4
  %27 = getelementptr inbounds [320 x i8], [320 x i8]* %10, i64 0, i64 0
  %28 = load i8*, i8** %7, align 8
  %29 = load i32, i32* %12, align 4
  %30 = call i32 @memcpy(i8* %27, i8* %28, i32 %29)
  %31 = load i32, i32* %12, align 4
  store i32 %31, i32* %13, align 4
  %32 = getelementptr inbounds [320 x i8], [320 x i8]* %10, i64 0, i64 0
  %33 = load i32, i32* %13, align 4
  %34 = sext i32 %33 to i64
  %35 = getelementptr inbounds i8, i8* %32, i64 %34
  %36 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %37 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %36, i32 0, i32 1
  %38 = load i8*, i8** %37, align 8
  %39 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %40 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %39, i32 0, i32 0
  %41 = load i32, i32* %40, align 8
  %42 = call i32 @memcpy(i8* %35, i8* %38, i32 %41)
  %43 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %44 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %43, i32 0, i32 0
  %45 = load i32, i32* %44, align 8
  %46 = load i32, i32* %13, align 4
  %47 = add nsw i32 %46, %45
  store i32 %47, i32* %13, align 4
  %48 = getelementptr inbounds [320 x i8], [320 x i8]* %10, i64 0, i64 0
  %49 = load i32, i32* %13, align 4
  %50 = sext i32 %49 to i64
  %51 = getelementptr inbounds i8, i8* %48, i64 %50
  %52 = load i32, i32* %8, align 4
  %53 = call i64 @sprintf(i8* %51, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i32 %52)
  %54 = load i32, i32* %13, align 4
  %55 = sext i32 %54 to i64
  %56 = add nsw i64 %55, %53
  %57 = trunc i64 %56 to i32
  store i32 %57, i32* %13, align 4
  %58 = getelementptr inbounds [320 x i8], [320 x i8]* %10, i64 0, i64 0
  %59 = load i32, i32* %13, align 4
  %60 = getelementptr inbounds [16 x i8], [16 x i8]* %11, i64 0, i64 0
  %61 = call i32 @my_md5_buffer(i8* %58, i32 %59, i8* %60)
  %62 = getelementptr inbounds [16 x i8], [16 x i8]* %11, i64 0, i64 0
  %63 = load i8*, i8** %9, align 8
  %64 = call i32 @bin2hex(i8* %62, i32 16, i8* %63)
  store i32 0, i32* %5, align 4
  br label %65

65:                                               ; preds = %26, %24
  %66 = load i32, i32* %5, align 4
  ret i32 %66
}

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @memcpy(i8*, i8*, i32) #1

declare dso_local i64 @sprintf(i8*, i8*, i32) #1

declare dso_local i32 @my_md5_buffer(i8*, i32, i8*) #1

declare dso_local i32 @bin2hex(i8*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
